<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp"
        app:cardBackgroundColor="@color/light_blue"

        app:cardCornerRadius="14dp"
        app:cardPreventCornerOverlap="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/h3"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/reset"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="@dimen/h5"
                app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5"
                app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColorHint="@color/blue"
                app:hintTextColor="@color/blue"
                app:layout_constraintEnd_toEndOf="@+id/appCompatTextView6"
                app:layout_constraintStart_toStartOf="@+id/appCompatTextView6"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@color/white"
                    android:hint="@string/email"
                    android:maxLines="1"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:background="@color/red_cancel"
                android:text="Cancel"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_accept"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.0" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="10dp"
                android:background="@color/green_confirm"
                android:text="Accept"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_cancel"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>